--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
-/Assets/3rd\ Parties*
+/Assets/3rd\ Parties/ProCore*
 
 # Visual Studio 2015 cache directory
 /.vs/
