Updated the gitignore in order to remove fmod unwanted stuff. Removed specific problematic files from the git chache

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+#PROBuilder
+Assets/3rd\ Parties/ProCore/ProBuilder/Data/ProBuilderPreferences.asset
+
+#FMOD
+*.log
+Assets/Resources/FMODStudioSettings.asset
+Assets/FMODStudioCache.asset
