--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .png filter=lfs diff=lfs merge=lfs -text
 LightingData.asset filter=lfs diff=lfs merge=lfs -text
+LightingData* filter=lfs diff=lfs merge=lfs -text
