--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 LightingData.asset filter=lfs diff=lfs merge=lfs -text
 LightingData* filter=lfs diff=lfs merge=lfs -text
 LightingData.* filter=lfs diff=lfs merge=lfs -text
+.exr filter=lfs diff=lfs merge=lfs -text
+*.exr filter=lfs diff=lfs merge=lfs -text
